--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,13 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.5
   dartz: ^0.10.1
+  dio: ^5.3.0
   equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
   font_awesome_flutter: ^10.5.0
+  get_it: ^7.6.0
   go_router: ^9.1.0
   google_fonts: ^5.1.0
 
